<resources>
    <string name="app_name">Runner</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="register_title">Register</string>
    <string name="username_email_phone">Email</string>
    <string name="connexion">Connexion</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="register_now">Register Now</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="pseudo">Pseudo</string>
    <string name="email">Email</string>
    <string name="password_register">Password</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="login">Login</string>
    <string name="map">Map</string>
    <string name="view_liked_place">View Liked Place</string>
    <string name="activity">Activity</string>
    <string name="step">Step</string>
    <string name="gym">Gym</string>
    <string name="_3_4_h">¾ h</string>
    <string name="run">Run</string>
    <string name="list">List</string>
    <string name="home">Home</string>
    <string name="maps">Maps</string>
    <string name="log_out">Log Out</string>
    <string name="location_detail">Location Detail</string>
    <string name="loading">...</string>
</resources>